# Scacchiera-elettronica

./: CMakeLists.txt  Chess.h  File_merge.bat  Piece.cpp  Piece.h  README.md  README.txt  Replay.cpp  bb  chessboard.cpp  chessboard.h  errorFIle.txt  game.cpp  log Scacco Matto cc.txt  log.txt  logCC.txt  logPC.txt  logPP.txt  pezzi modifica
MERGE/: merge.cpp
include/: Chessboard.h  Piece.cpp  Piece.h  Rules.h
src/: Chessboard.cpp  Has_valid_move.cpp  Main.cpp  Piece.cpp  Replay.cpp  Rules.cpp  Scacchiera.cpp  Valid_moves.cpp
